# mlops-project2

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/mlops_hyperparameter_tuning/: __init__.py  cli.py  data.py  experiments.py  model.py  sweeps.py
